force-app/main/default/objects/Timetable__c/Timetable__c.object-meta.xml
<CustomObject>
    <label>Horario</label>
    <nameField>
        <label>Time Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Horarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>