force-app/main/default/objects/Timetable__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <description>Descripción del horario. Incluido en la carga de datos.</description>
    <label>Descripción</label>
    <length>255</length>
    <type>Text</type>
</CustomField>