force-app/main/default/objects/Timetable__c/fields/FridayAfterFrom__c.field-meta.xml
<CustomField>
    <fullName>FridayAfterFrom__c</fullName>
    <label>Friday Aft. (from)</label>
    <type>Time</type>
</CustomField>