force-app/main/default/objects/Timetable__c/fields/FridayAfterTo__c.field-meta.xml
<CustomField>
    <fullName>FridayAfterTo__c</fullName>
    <label>Friday Aft. (to)</label>
    <type>Time</type>
</CustomField>