force-app/main/default/objects/Timetable__c/fields/FridayMorningFrom__c.field-meta.xml
<CustomField>
    <fullName>FridayMorningFrom__c</fullName>
    <label>Friday Mor. (from)</label>
    <type>Time</type>
</CustomField>