force-app/main/default/objects/Timetable__c/fields/FridayMorningTo__c.field-meta.xml
<CustomField>
    <fullName>FridayMorningTo__c</fullName>
    <label>Friday Mor. (to)</label>
    <type>Time</type>
</CustomField>