force-app/main/default/objects/Timetable__c/fields/Libranza__c.field-meta.xml
<CustomField>
    <fullName>Libranza__c</fullName>
    <description>Descripción en formato texto de los días libres del horario. Creado en la carga de datos.</description>
    <label>Libranza</label>
    <length>255</length>
    <type>Text</type>
</CustomField>