force-app/main/default/objects/Timetable__c/fields/MondayAfterFrom__c.field-meta.xml
<CustomField>
    <fullName>MondayAfterFrom__c</fullName>
    <label>Monday Aft. (from)</label>
    <type>Time</type>
</CustomField>