force-app/main/default/objects/Timetable__c/fields/MondayAfterTo__c.field-meta.xml
<CustomField>
    <fullName>MondayAfterTo__c</fullName>
    <label>Monday Aft. (to)</label>
    <type>Time</type>
</CustomField>