force-app/main/default/objects/Timetable__c/fields/MondayMorningFrom__c.field-meta.xml
<CustomField>
    <fullName>MondayMorningFrom__c</fullName>
    <label>Monday Mor. (from)</label>
    <type>Time</type>
</CustomField>