force-app/main/default/objects/Timetable__c/fields/MondayMorningTo__c.field-meta.xml
<CustomField>
    <fullName>MondayMorningTo__c</fullName>
    <label>Monday Mor. (to)</label>
    <type>Time</type>
</CustomField>