force-app/main/default/objects/Timetable__c/fields/SaturdayAfterFrom__c.field-meta.xml
<CustomField>
    <fullName>SaturdayAfterFrom__c</fullName>
    <label>Saturday Aft. (from)</label>
    <type>Time</type>
</CustomField>