force-app/main/default/objects/Timetable__c/fields/SaturdayAfterTo__c.field-meta.xml
<CustomField>
    <fullName>SaturdayAfterTo__c</fullName>
    <label>Saturday Aft. (to)</label>
    <type>Time</type>
</CustomField>