force-app/main/default/objects/Timetable__c/fields/SaturdayMorningFrom__c.field-meta.xml
<CustomField>
    <fullName>SaturdayMorningFrom__c</fullName>
    <label>Saturday Mor. (from)</label>
    <type>Time</type>
</CustomField>