force-app/main/default/objects/Timetable__c/fields/SaturdayMorningTo__c.field-meta.xml
<CustomField>
    <fullName>SaturdayMorningTo__c</fullName>
    <label>Saturday Mor. (to)</label>
    <type>Time</type>
</CustomField>