force-app/main/default/objects/Timetable__c/fields/SundayAfterFrom__c.field-meta.xml
<CustomField>
    <fullName>SundayAfterFrom__c</fullName>
    <label>Sunday Aft. (from)</label>
    <type>Time</type>
</CustomField>