force-app/main/default/objects/Timetable__c/fields/SundayAfterTo__c.field-meta.xml
<CustomField>
    <fullName>SundayAfterTo__c</fullName>
    <label>Sunday Aft. (to)</label>
    <type>Time</type>
</CustomField>