force-app/main/default/objects/Timetable__c/fields/SundayMorningFrom__c.field-meta.xml
<CustomField>
    <fullName>SundayMorningFrom__c</fullName>
    <label>Sunday Mor. (from)</label>
    <type>Time</type>
</CustomField>