force-app/main/default/objects/Timetable__c/fields/SundayMorningTo__c.field-meta.xml
<CustomField>
    <fullName>SundayMorningTo__c</fullName>
    <label>Sunday Mor. (to)</label>
    <type>Time</type>
</CustomField>