force-app/main/default/objects/Timetable__c/fields/ThursdayAfterFrom__c.field-meta.xml
<CustomField>
    <fullName>ThursdayAfterFrom__c</fullName>
    <label>Thursday Aft. (from)</label>
    <type>Time</type>
</CustomField>