force-app/main/default/objects/Timetable__c/fields/ThursdayAfterTo__c.field-meta.xml
<CustomField>
    <fullName>ThursdayAfterTo__c</fullName>
    <label>Thursday Aft. (to)</label>
    <type>Time</type>
</CustomField>