force-app/main/default/objects/Timetable__c/fields/ThursdayMorningFrom__c.field-meta.xml
<CustomField>
    <fullName>ThursdayMorningFrom__c</fullName>
    <label>Thursday Mor. (from)</label>
    <type>Time</type>
</CustomField>