force-app/main/default/objects/Timetable__c/fields/ThursdayMorningTo__c.field-meta.xml
<CustomField>
    <fullName>ThursdayMorningTo__c</fullName>
    <label>Thursday Mor. (to)</label>
    <type>Time</type>
</CustomField>