force-app/main/default/objects/Timetable__c/fields/TuesdayAfterFrom__c.field-meta.xml
<CustomField>
    <fullName>TuesdayAfterFrom__c</fullName>
    <label>Tuesday Aft. (from)</label>
    <type>Time</type>
</CustomField>