force-app/main/default/objects/Timetable__c/fields/TuesdayAfterTo__c.field-meta.xml
<CustomField>
    <fullName>TuesdayAfterTo__c</fullName>
    <label>Tuesday Aft. (to)</label>
    <type>Time</type>
</CustomField>