force-app/main/default/objects/Timetable__c/fields/TuesdayMorningFrom__c.field-meta.xml
<CustomField>
    <fullName>TuesdayMorningFrom__c</fullName>
    <label>Tuesday Mor. (from)</label>
    <type>Time</type>
</CustomField>