force-app/main/default/objects/Timetable__c/fields/TuesdayMorningTo__c.field-meta.xml
<CustomField>
    <fullName>TuesdayMorningTo__c</fullName>
    <label>Tuesday Mor (to)</label>
    <type>Time</type>
</CustomField>