force-app/main/default/objects/Timetable__c/fields/WednesdayAfterFrom__c.field-meta.xml
<CustomField>
    <fullName>WednesdayAfterFrom__c</fullName>
    <label>Wednesday Aft. (from)</label>
    <type>Time</type>
</CustomField>