force-app/main/default/objects/Timetable__c/fields/WednesdayAfterTo__c.field-meta.xml
<CustomField>
    <fullName>WednesdayAfterTo__c</fullName>
    <label>Wednesday Aft. (to)</label>
    <type>Time</type>
</CustomField>