force-app/main/default/objects/Timetable__c/fields/WednesdayMorningFrom__c.field-meta.xml
<CustomField>
    <fullName>WednesdayMorningFrom__c</fullName>
    <label>Wednesday Mor. (from)</label>
    <type>Time</type>
</CustomField>