force-app/main/default/objects/Timetable__c/fields/WednesdayMorningTo__c.field-meta.xml
<CustomField>
    <fullName>WednesdayMorningTo__c</fullName>
    <label>Wednesday Mor. (to)</label>
    <type>Time</type>
</CustomField>